fix active link, add stack overflow to contact

--- a/app/styles/application/core/_global.scss
+++ b/app/styles/application/core/_global.scss
@@ -62,7 +62,7 @@ a {
 }
 
 a.active {
-  color: darken($color-light-grey-1, 35%);
+  color: darken($color-light-grey-1, 35%) !important;
 }
 
 .bg-nav {
