--- a/app/styles/application/pages/_contact.scss
+++ b/app/styles/application/pages/_contact.scss
@@ -13,6 +13,11 @@
     padding-right: 10px;
   }
 
+  .contact-stack-overflow-icon {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+
   .contact-linkedin-icon {
     padding-left: 10px;
   }
